--- a/index.html
+++ b/index.html
@@ -11,10 +11,58 @@
         <!-- ************************** single card -->
         <div class="card">
           <aside class="card-headline flex-items">
-            <span>Incomplete</span><span>0</span>
+            <span class="flex-items"
+              ><span class="svg svg-1 mr-3"></span> Incomplete</span
+            ><span>0</span>
           </aside>
           <!-- ************** Items for particular card -->
-          <aside class="card-item my-3">
+          <aside class="card-item mb-3">
+            <div class="card-person flex-items">
+              <span class="flex-items">
+                <img src="./assets/p1.png" alt="" class="content-img mr-3" />
+                Mr. Khan
+              </span>
+              <span class="flex-items"
+                ><img
+                  src="./assets/p2.png"
+                  alt=""
+                  class="content-img mr-3"
+                />Moinul Hossain</span
+              >
+            </div>
+            <div class="flex-items">
+              <span class="card-content"
+                ><img src="./assets/i-b.png" alt="" class="content-icon" />
+                Lorem ipsum dolor sit amet.</span
+              >
+              <span
+                ><img src="./assets/t-l.png" alt="" class="content-icon" />
+                1/2</span
+              >
+            </div>
+            <div class="flex-items">
+              <img src="./assets/p3.png" alt="" class="content-img" />
+              <img src="./assets/p4.png" alt="" class="content-img" />
+              <span>12+</span>
+              <span
+                ><img src="./assets/msg.png" alt="" class="content-icon" />
+                15</span
+              >
+              <span>
+                <button onclick="openPopup()" class="modal-btn">
+                  <img src="./assets/att.png" alt="" class="content-icon" />
+                  25
+                </button>
+              </span>
+              <span
+                ><img src="./assets/cal.png" alt="" class="content-icon" />
+                06-12-2023
+              </span>
+            </div>
+          </aside>
+          <!-- Items for particular card ************** -->
+          <!-- ************** Items for particular card -->
+          <aside class="card-item mb-3">
             <div class="card-person flex-items">
               <span class="flex-items">
                 <img src="./assets/p1.png" alt="" class="content-img" />
@@ -55,7 +103,7 @@
           </aside>
           <!-- Items for particular card ************** -->
           <!-- ************** Items for particular card -->
-          <aside class="card-item my-3">
+          <aside class="card-item mb-3">
             <div class="card-person flex-items">
               <span class="flex-items">
                 <img src="./assets/p1.png" alt="" class="content-img" />
@@ -96,7 +144,7 @@
           </aside>
           <!-- Items for particular card ************** -->
           <!-- ************** Items for particular card -->
-          <aside class="card-item my-3">
+          <aside class="card-item mb-3">
             <div class="card-person flex-items">
               <span class="flex-items">
                 <img src="./assets/p1.png" alt="" class="content-img" />
@@ -137,7 +185,7 @@
           </aside>
           <!-- Items for particular card ************** -->
           <!-- ************** Items for particular card -->
-          <aside class="card-item my-3">
+          <aside class="card-item mb-3">
             <div class="card-person flex-items">
               <span class="flex-items">
                 <img src="./assets/p1.png" alt="" class="content-img" />
@@ -178,48 +226,7 @@
           </aside>
           <!-- Items for particular card ************** -->
           <!-- ************** Items for particular card -->
-          <aside class="card-item my-3">
-            <div class="card-person flex-items">
-              <span class="flex-items">
-                <img src="./assets/p1.png" alt="" class="content-img" />
-                Mr. Khan
-              </span>
-              <span class="flex-items"
-                ><img src="./assets/p2.png" alt="" class="content-img" />Moinul
-                Hossain</span
-              >
-            </div>
-            <div class="flex-items">
-              <span class="card-content"
-                ><img src="./assets/i-b.png" alt="" class="content-icon" />
-                Lorem ipsum dolor sit amet.</span
-              >
-              <span
-                ><img src="./assets/t-l.png" alt="" class="content-icon" />
-                1/2</span
-              >
-            </div>
-            <div class="flex-items">
-              <img src="./assets/p3.png" alt="" class="content-img" />
-              <img src="./assets/p4.png" alt="" class="content-img" />
-              <span>12+</span>
-              <span
-                ><img src="./assets/msg.png" alt="" class="content-icon" />
-                15</span
-              >
-              <span
-                ><img src="./assets/att.png" alt="" class="content-icon" />
-                25</span
-              >
-              <span
-                ><img src="./assets/cal.png" alt="" class="content-icon" />
-                06-12-2023</span
-              >
-            </div>
-          </aside>
-          <!-- Items for particular card ************** -->
-          <!-- ************** Items for particular card -->
-          <aside class="card-item my-3">
+          <aside class="card-item mb-3">
             <div class="card-person flex-items">
               <span class="flex-items">
                 <img src="./assets/p1.png" alt="" class="content-img" />
@@ -264,7 +271,9 @@
 
         <div class="card">
           <aside class="card-headline flex-items">
-            <span>Incomplete</span><span>0</span>
+            <span class="flex-items"
+              ><span class="svg svg-2 mr-3"></span> To Do</span
+            ><span>0</span>
           </aside>
           <aside class="card-item">
             <div class="card-person flex-items">
@@ -308,7 +317,9 @@
         </div>
         <div class="card">
           <aside class="card-headline flex-items">
-            <span>Incomplete</span><span>0</span>
+            <span class="flex-items"
+              ><span class="svg svg-3 mr-3"></span> Doing</span
+            ><span>0</span>
           </aside>
           <aside class="card-item">
             <div class="card-person flex-items">
@@ -352,7 +363,9 @@
         </div>
         <div class="card">
           <aside class="card-headline flex-items">
-            <span>Incomplete</span><span>0</span>
+            <span class="flex-items"
+              ><span class="svg svg-4 mr-3"></span> Under Review</span
+            ><span>0</span>
           </aside>
           <aside class="card-item">
             <div class="card-person flex-items">
@@ -396,7 +409,9 @@
         </div>
         <div class="card">
           <aside class="card-headline flex-items">
-            <span>Incomplete</span><span>0</span>
+            <span class="flex-items"
+              ><span class="svg svg-5 mr-3"></span> Completed</span
+            ><span>0</span>
           </aside>
           <aside class="card-item">
             <div class="card-person flex-items">
@@ -440,7 +455,9 @@
         </div>
         <div class="card">
           <aside class="card-headline flex-items">
-            <span>Incomplete</span><span>0</span>
+            <span class="flex-items"
+              ><span class="svg svg-6 mr-3"></span> Publish</span
+            ><span>0</span>
           </aside>
           <aside class="card-item">
             <div class="card-person flex-items">
@@ -484,6 +501,23 @@
         </div>
       </section>
     </main>
+
+    <!-- Popup content -->
+    <div id="popup" class="popup">
+      <div class="popup-content">
+        <span class="close-button" onclick="closePopup()">&times;</span>
+        <div class="modal-body">
+          <div class="upload-btn-wrapper mb-3">
+            <button class="btn">+</button>
+            <input type="file" name="file" />
+            <label for="file">Add your attachment</label>
+          </div>
+          <div>
+            <h5>List of Attachment</h5>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="./script.js"></script>
   </body>
