uploaded file by php

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Task for Seopage1</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
     <main class="page">
       <section class="card-container">
@@ -1026,11 +1027,19 @@
       <div class="popup-content">
         <span class="close-button" onclick="closePopup()">&times;</span>
         <div class="modal-body">
-          <div class="upload-btn-wrapper mb-3">
-            <button class="btn">+</button>
-            <input type="file" name="file" />
-            <label for="file">Add your attachment</label>
-          </div>
+          <form
+            method="post"
+            enctype="multipart/form-data"
+            action="./uploads.php"
+            id="uploadForm"
+          >
+            <div class="upload-btn-wrapper mb-3">
+              <button class="btn">+</button>
+              <input type="file" name="file" />
+              <label for="file">Add your attachment</label>
+            </div>
+            <button type="submit">Upload</button>
+          </form>
           <div>
             <h5>List of Attachment</h5>
           </div>
