--- a/index.html
+++ b/index.html
@@ -1021,32 +1021,19 @@
         </div>
       </section>
     </main>
-
-    <!-- Popup content -->
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <span class="close-button" onclick="closePopup()">&times;</span>
-        <div class="modal-body">
-          <form
-            method="post"
-            enctype="multipart/form-data"
-            action="./uploads.php"
-            id="uploadForm"
-          >
-            <div class="upload-btn-wrapper mb-3">
-              <button class="btn">+</button>
-              <input type="file" name="file" />
-              <label for="file">Add your attachment</label>
-            </div>
-            <button type="submit">Upload</button>
-          </form>
-          <div>
-            <h5>List of Attachment</h5>
-          </div>
-        </div>
-      </div>
-    </div>
-
+    <div id="includedContent"></div>
     <script src="./script.js"></script>
+    <!-- jquery cnd -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Load popup.php file from another file -->
+    <script>
+      $(function () {
+        $("#includedContent").load("./popup.php");
+      });
+    </script>
   </body>
 </html>
